--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "baidumapkit": "^1.1.0",
     "react": "15.2.0",
-    "react-native": "0.28.0"
+    "react-native": "0.28.0",
+    "react-native-baidumap": "0.0.14"
   }
 }
